Header: Fix spacing in header & filter bar

--- a/source/wp-content/themes/wporg-photos-2024/src/style/style.scss
+++ b/source/wp-content/themes/wporg-photos-2024/src/style/style.scss
@@ -27,3 +27,8 @@
 .wp-block-query-pagination.wp-block-query-pagination {
 	margin-bottom: 0;
 }
+
+/* Prevent screen-reader-text headings from adding block gap. */
+h1.screen-reader-text + .wp-block-post-template {
+	margin-top: 0;
+}
